# Ultron

./: .env.example  .gitignore  LICENSE  README.md  adapter_capability_contract.yaml  pyproject.toml  run.sh
.gjc/state/: audit.jsonl  ralplan-state.json  skill-active-state.json
.gjc/ultragoal/: brief.md  (+2 more)
artifacts/: frontend-qa.txt  full-suite.txt  g001-qa.txt  g002-qa.txt  g003-qa.txt  g004-qa.txt  g005-qa.txt  g006-qa.txt  g007-http-e2e.txt  g007-loop-e2e.txt  g007-qa.txt  gap1-qa.txt  gap2-qa.txt  gap3-qa.txt  gap4-qa.txt  gap5-qa.txt  gap6-qa.txt  gap7-qa.txt  gap8-qa.txt  story1-qa.txt  story2-qa.txt  story3-qa.txt  story4-qa.txt  story5-qa.txt  story6-qa.txt  uiv2-qa.txt
tests/: test_capability_contract.py  test_g001_hardening.py  test_g001_redteam.py  test_g002_module.py  test_g002_redteam.py  test_g003_redteam.py  test_g003_registry.py  test_g003_resolver.py  test_g004_manifest.py  test_g004_redteam.py  test_g004_rollback.py  test_g005_hardening.py  test_g005_loop.py  test_g005_redteam.py  test_g005_selection.py  test_g005_variation.py  test_g006_eval.py  test_g006_feedback.py  test_g006_redteam.py  test_g007_app.py  test_g007_server.py  test_g007_ui.py  test_gap1_adapter.py  test_gap1_redteam.py  test_gap1_vendor_contract.py  test_gap2_blobs.py  test_gap2_redteam.py  test_gap3_durable.py  test_gap4_eval.py  test_gap4_redteam.py  test_gap5_feedback.py  test_gap5_redteam.py  test_gap6_generative.py  test_gap6_redteam.py  test_gap7_platform.py  test_gap7_redteam.py  test_gap8_live.py  test_gap8_redteam.py  test_genui_chat.py  test_model_provider_multimodal.py  (+12 more)
(+70 files in other folders)
