[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ultron"
version = "0.1.0"
description = "Modular self-evolving harness ecology preserving hermes-agent core."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ultron contributors" }]
dependencies = [
    "pyyaml",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest", "fastapi", "uvicorn", "httpx", "jinja2", "pillow"]

[project.scripts]
ultron = "ultron.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
